# PersonalUtils

./: .gitignore  CMakeLists.txt  README.md
Exiv2/include/exiv2/: exiv2.hpp  exv_msvc.h
Exiv2/lib/: libexiv2.lib  libexpat.lib  zlib1.lib
docs/obs/: bmem.md
docs/obs/libobs/: base.md  circlebuf.md  darray.md
docs/obs/obs/: OBS-startup.md  base.md  obs-app.md
image/: jpegdecodertest.cpp
lib/gtest/Debug/: gtest_main.lib
lib/gtest/Release/: gtest.lib  gtest_main.lib
src/designpattern/AbstractFactory/: AbstractFactory.cpp  AbstractFactory.h  AbstractProduct.h  ConcreteFactory.h  ConcreteProduct.cpp  ConcreteProduct.h  main.cpp
src/image/: test.cpp
src/utility/: platform.cpp  platform.h  profile.cpp  profile.h
test/: main.cpp  utility.hpp
windows/: CMakeLists.txt  main.cpp
x264/src/: last_x264.tar.bz2
